// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TorQLX render should render Sparkline 1`] = `
<ErrorBoundary>
  <Sparkline
    className="h-8"
    data={
      [
        1,
        2,
        3,
      ]
    }
    type={
      [
        "line",
      ]
    }
  />
</ErrorBoundary>
`;

exports[`TorQLX render should render array 1`] = `
<JSONViewer
  collapsed={1}
  name={null}
  src={
    [
      1,
      2,
      3,
    ]
  }
/>
`;

exports[`TorQLX render should render object 1`] = `
<JSONViewer
  collapsed={1}
  name={null}
  src={
    {
      "a": 1,
      "b": 2,
    }
  }
/>
`;

exports[`TorQLX render should render unknown tag 1`] = `
<div>
  Unknown tag: 
  Unknown
</div>
`;
